--- a/angular/src/app/code-of-conduct/code-of-conduct.component.html
+++ b/angular/src/app/code-of-conduct/code-of-conduct.component.html
@@ -1,1 +1,87 @@
-<p>code-of-conduct works!</p>
+<div class="content">
+    <div class="content2">
+        <h1>Código de conduta</h1>
+        <p>
+            Todos os participantes, palestrantes, patrocinadores e voluntários dos encontros 
+            precisam concordar com este código de conduta. Os organizadores vão reforçar que
+             este código seja seguido durante todos os eventos. Esperamos a cooperação de 
+        </p>
+            <h2>Precisa de ajuda?</h2>
+        <p>
+             Caso tenha alguma dúvida ou sugestão, você encontra todos os nossos contatos no
+             site oficial da comunidade <a href="http://devpp.com.br">http://devpp.com.br</a>
+        </p> 
+            <h2>Versão rápida</h2>
+        <p>
+            Todos os encontros da Dev PP são dedicadas a fornecer uma experiência de
+            encontros livres de assédio para todos, independentemente do sexo, identidade de
+            gênero e expressão, idade, orientação sexual, deficiência, aparência física, tamanho
+            corporal, cor de pele, etnia, religião (ou falta dela) ou escolhas de tecnologias. Nós
+            não toleramos o assédio aos participantes, sob qualquer forma. Linguagem e
+            imagens sexuais não são apropriadas em nenhum local dos eventos, incluindo 
+            palestras, workshops, festas, Twitter, Facebook e outras mídias on-line. Não é
+            permitido aos participantes, voluntários, palestrantes, patrocinadores e a qualquer
+            pessoa que não seja da organização mexer em equipamentos, entrar em salas 
+            fechadas, alterar configuração de palco ou assentos e utilizar o microfone sem
+            permissão.
+        </p>
+        <p>
+            Os participantes que violarem estas regras poderão ser punidos ou expulsos do
+            grupo e impedidos de participar de novos eventos e eventos afiliados sem
+            restituição, a critério dos organizadores.
+        </p>   
+            <h2>Versão detalhada</h2>
+        <p>
+            Assédio inclui comentários verbais ofensivos relacionados ao gênero, identidade de
+            gênero e expressão, idade, orientação sexual, deficiência, aparência física, tamanho
+            corporal, cor de pele, etnia, religião, escolhas de tecnologias, imagens sexuais em 
+            espaços públicos, intimidação deliberada, perseguição, stalking, fotografias ou 
+            filmagens constrangedoras, contato físico inadequado e atenção sexual indesejada.
+        </p>
+        <p>
+            Os participantes que receberem uma solicitação para interromper qualquer 
+            comportamento de assédio devem fazê-lo imediatamente.
+        </p> 
+        <p>
+            Se um participante se envolve em comportamento de assédio, os organizadores
+            podem tomar todas as medidas que considerem adequadas, incluindo avisar o 
+            ofensor e expulsá-lo.
+        </p>
+        <p>
+            Caso seja assediado, perceba que alguém está sendo assediado ou tenha alguma
+            dúvida, entre em contato com um dos organizadores do evento imediatamente. Não 
+            tome atitudes por conta própria e denuncie a situação de forma discreta, a fim de
+            mantermos a segurança de todos, a ordem, e o sigilo.
+        </p>
+        <p>
+            Caso queira contribuir ou ache necessário mexer em algum equipamento que
+            pertença ao local do evento como computadodores, mesas, cadeiras e poltronas,
+            interfone, microfones, cozinha e seus utensílios e qualquer tipo de patrimônio que
+            não lhe pertença deverá ser autorizado pela organização do evento, caso contrário 
+            será sujeito à cobrança de valores cabíveis a qualquer dano que seja encontrado.
+        </p> 
+        <p>
+            Caso encontre qualquer objeto ou equipamento abandonado, perdido ou
+            aparentemente sem dono a organizaçãpo deverá ser avisado imediatamente para
+            anúncio no microfone.
+        </p>
+        <p>
+            A equipe organizadora estará disposta em todos os eventos a auxiliar
+            os participantes no que for preciso para garantir a segurança de todos, Nós
+            valorizamos a sua participação e queremos que aproveite o máximo possível, sinta-
+            se à vontade e em segurança, e acima de tudo, respeitado.
+        </p>
+        <p> 
+            Esperamos que os participantes sigam estas regras durante os encontros, além de
+            eventos sociais relacionados, como after-parties, happy-hours ou jantares.
+        </p> 
+        <p>
+            Este Código de Conduta foi traduzido e adaptado de: <a href=""> confcodeofconduct.com</a>
+            Esta obra está licenciada sob <a href=""> Creative Commons Attribution 3.0 Unported License</a>
+        </p>
+    </div>
+    <img class="desktop" src="../../../assets/images/background-image/bg-be-part.png" alt="">
+    <img class="bg" src="../../../assets/images/background-image/bg2.svg" alt="">
+    <img class="bg2" src="../../../assets/images/background-image/bg-looper.png" alt="">
+    <app-be-part-of-it-two></app-be-part-of-it-two>
+</div>
