--- a/angular/src/app/components/event-cards/event-cards.component.html
+++ b/angular/src/app/components/event-cards/event-cards.component.html
@@ -1,5 +1,9 @@
 <div class="event-card">
     <h1>PRÓXIMOS EVENTOS</h1>
+    <div class="warning">
+        <img src="assets/images/exclamacao.svg" alt="ping_map">
+        <p>Os encontros presenciais podem ter vagas limitadas. Garanta sua participação.</p>
+    </div>
     <div class="content">
         <div class="card">
             <h3>Meetup</h3>
@@ -7,7 +11,7 @@
                 <p class="data">21/09</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="address flex">
-                    <img src="assets/images/ping_map.svg" alt="ping_map">
+                    <img class="ping" src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Foregon</p>
                         <p class="street">Rua Nicolau Cacciatori, 489</p>
@@ -22,7 +26,7 @@
                 <p class="data-mid">18/10</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="address flex">
-                    <img src="assets/images/ping_map.svg" alt="ping_map">
+                    <img class="ping" src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Inova Prudente</p>
                         <p class="street">Av. Comendador Alberto Bonfiglioli, n° 2700</p>
@@ -37,7 +41,7 @@
                 <p class="data">16/11</p>
                 <p class="hour">ÀS 20H HORAS</p>
                 <div class="address flex">
-                    <img src="assets/images/ping_map.svg" alt="ping_map">
+                    <img class="ping" src="assets/images/ping_map.svg" alt="ping_map">
                     <div>
                         <p class="city">Inova Prudente</p>
                         <p class="street">Av. Comendador Alberto Bonfiglioli, n° 2700</p>
@@ -47,7 +51,7 @@
             </div>
         </div>
     </div>
-        <div class="warning">
+        <div class="warning2">
             <p><img src="assets/images/exclamacao.svg" alt="ping_map">⠀Os encontros presenciais podem ter vagas limitadas. Garanta sua participação.</p>
         </div>
 </div> 
