--- a/angular/src/app/components/footer/footer.component.html
+++ b/angular/src/app/components/footer/footer.component.html
@@ -1,17 +1,15 @@
 <div class="footer">
-    <div>
         <div class="flex">
-            <img src="../../../assets/images/Logos/devpp_only_logo.png" alt="">
+            <img class="img1" src="../../../assets/images/Logos/devpp_only_logo.png" alt="">
             <p class="devpp">DEV PP</p>
-            <div class="flex">
-                <p class="cod-conduct">Código de Conduta</p>
-                <img class="arrow1" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
-            </div>
+                <p class="cod-conduct"><a href="code-of-conduct">Código de Conduta</a>                 
+                    <img class="arrow1" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
+                </p>
         </div>
+        <br>
         <div class="flex">
             <p class="community">Comunidade de Desenvolvedores de Presidente Prudente e região.</p>
-            <img class="arrow2" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt="">
+            <a href="#home"><img class="arrow2" src="../../../assets/images/Logo_one_color/blue/arrow-up.svg" alt=""></a>
             <p class="copyright">© DEV PP 2017 / 2022. Todos os direitos reservados.</p>
         </div>
-    </div>
 </div> 
