--- a/angular/src/app/components/form/form.component.html
+++ b/angular/src/app/components/form/form.component.html
@@ -8,7 +8,7 @@
             <a target="_blank" href="https://t.me/+Pkvilztk63E4ODA5"><img class="icons-box" src="../../../assets/images/Logo_one_color/blue/telegram.svg" alt=""></a>
             <a target="_blank" href="https://devpp-slack.herokuapp.com/"><img class="icons-box" src="../../../assets/images/Logo_one_color/blue/slack.svg" alt=""></a>
             <a target="_blank" href="https://discord.gg/Yp5dns5gK5"><img class="icons-box" src="../../../assets/images/Logo_one_color/blue/discord_logo.svg" alt=""></a>
-            <a target="_blank" href="https://github.com/dev-pp"><img class="icons-box" src="../../../assets/images/Logo_one_color/blue/github.svg" alt=""></a>
+            <a target="_blank" href="https://github.com/dev-pp"><img class="icons-box none" src="../../../assets/images/Logo_one_color/blue/github.svg" alt=""></a>
         </div>
     </div>
     <div class="form">
