--- a/angular/src/app/components/hero/hero.component.html
+++ b/angular/src/app/components/hero/hero.component.html
@@ -12,5 +12,7 @@
         <button title="_" class="mouse-scroll" href="#reload" role="button">
             <img src="assets/images/devpp-mouse-scroll.svg" alt="DEV PP Mouse Scroll">
         </button>
+        <img class="bg" src="../../../assets/images/background-image/bg2.svg" alt="">
+        <img class="desktop" src="../../../assets/images/background-image/BG.png" alt="">
     </div>
 </section>
