--- a/angular/src/app/components/hero/hero.component.scss
+++ b/angular/src/app/components/hero/hero.component.scss
@@ -1,21 +1,37 @@
 #home {
-    background-image: url("../../../assets/images/background-image/BG.png");
+    margin-bottom: -30vh;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1080px;
+    height: 180vh;
+    .desktop{
+        display: inline;
+        width: 100%;
+        margin-top: -600px;
+    }
     .content {
         text-align: center;
         width: 100%;
 
+        button{
+            border: none;
+        }
+
         h2 {
             &.text-medium {
-                font-size: 1.5rem;
-                background: linear-gradient(91.06deg, #ff1cf7 2.26%, #00f0ff 100%);
+                padding-top: 150px;
+                font-family: 'Chakra Petch';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 24px;
+                line-height: 130%;
+                text-align: center;
+                letter-spacing: 0.24em;
+                text-transform: uppercase;
+                background: linear-gradient(91.06deg, #00F0FF 2.26%, #FFFFFF 100%);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 background-clip: text;
-                padding-top: 150px;
-                font-weight: bold
+                text-fill-color: transparent;
             }
         }
         h1 {
@@ -26,7 +42,7 @@
                 background-clip: text;
                 padding-top: 48px;    
                 width: 96vw;
-                font-size: 64px;  
+                font-size: 4rem;  
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -40,30 +56,91 @@
             text-align: center;
             padding-left: 16vw;
             padding-right: 16vw;
-
             p {
                 letter-spacing: 0.72px;
                 color: #FAFAFA;
                 padding-top: 64px;
+
+                font-weight: 400;
+                font-size: 20px;
+                line-height: 140%;
             }
         }
         .mouse-scroll {
-            padding-top: 104px;
-            padding-bottom: 270px;
+            padding-top: 80px;
+            padding-bottom: 0px;
             background-color: transparent;
+        }
+        .bg{
+            display: none;
         }
     }
 }
 
+@media screen and (max-width: 1600px) {
+    #home {
+        height: 150vh;
+    }
+}
+@media screen and (max-width: 600px) {
+    #home {
+        height: 150vh;
+    }
+}
 @media screen and (max-width: 800px) {
     #home { 
+        background-image: none;
+        background-color: #000814;
+        height: 180vh;
+
         .content {
+            padding: 0;
+            margin: 0;
+            .desktop{
+                display: none;
+            }
             h1 {
                 &.text-large {
-                    font-size: 28px;
-                    width: 300px;
+                    font-weight: 700;
+                    font-size: 30px;
+                    width: 320px;
                 }
+            }
+            h2 {
+                &.text-medium {
+                    padding-top: 8vh;
+                    font-weight: 700;
+                    font-size: 15px;
+                    line-height: 130%;
+                    letter-spacing: 0.24em;
+                }
+            }
+            .purpose {
+                padding-left: 8vw;
+                padding-right: 8vw;
+            }
+            .mouse-scroll {
+                padding-top: -250px;
+                margin-bottom: 30px;
+                background-color: transparent;
+            }
+            .bg{
+                display: inline;
+                margin-top: -280px;
+                width: 100%;
             }
         }    
     }     
+}
+
+@media screen and (max-width: 473px) {
+    #home {
+        .content{
+            .mouse-scroll {
+                padding-top: 50px;
+                margin-bottom: 30px;
+                background-color: transparent;
+            }
+        }
+    }
 }
