--- a/angular/src/app/components/hero/hero.component.scss
+++ b/angular/src/app/components/hero/hero.component.scss
@@ -6,7 +6,7 @@
     .desktop{
         display: inline;
         width: 100%;
-        margin-top: -600px;
+        margin-top: -85vh;
     }
     .content {
         text-align: center;
@@ -67,7 +67,7 @@
             }
         }
         .mouse-scroll {
-            padding-top: 80px;
+            padding-top: 8vh;
             padding-bottom: 0px;
             background-color: transparent;
         }
@@ -79,19 +79,69 @@
 
 @media screen and (max-width: 1600px) {
     #home {
-        height: 150vh;
+        height: 160vh;
+        .desktop{
+            margin-top: -80vh;
+        }
+
     }
 }
+@media screen and (max-width: 1425px) {
+    #home {
+        height: 160vh;
+        .desktop{
+            margin-top: -70vh;
+        }
+    .content{
+            .mouse-scroll{
+                margin-top: -5vh;
+            }
+        }
+    }
+}
+@media screen and (max-width: 1200px) {
+    #home {
+        .desktop{
+            margin-top: -60vh;
+        }
+    }
+}
+@media screen and (max-width: 1100px) {
+    #home {
+        .desktop{
+            margin-top: -55vh;
+        }
+    }
+}
+@media screen and (max-width:900px) {
+    #home {
+        height: 160vh;
+        .desktop{
+            margin-top: -45vh;
+        }
+    }
+}
+
 @media screen and (max-width: 600px) {
     #home {
         height: 150vh;
+    }
+}
+@media screen and (max-width: 650px) {
+    #home {
+        height: 160vw;
+    }
+}
+@media screen and (max-width: 700px) {
+    #home {
+        height: 130vw;
     }
 }
 @media screen and (max-width: 800px) {
     #home { 
         background-image: none;
         background-color: #000814;
-        height: 180vh;
+        height: 140vh;
 
         .content {
             padding: 0;
@@ -108,7 +158,7 @@
             }
             h2 {
                 &.text-medium {
-                    padding-top: 8vh;
+                    padding-top: 8vw;
                     font-weight: 700;
                     font-size: 15px;
                     line-height: 130%;
@@ -126,7 +176,7 @@
             }
             .bg{
                 display: inline;
-                margin-top: -280px;
+                margin-top: -65vw;
                 width: 100%;
             }
         }    
